--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wolf-use-fetch",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "react use-fetch hook",
   "main": "lib/index.js",
   "scripts": {
@@ -23,7 +23,9 @@
     "email": "huahuazfh@qq.com",
     "url": "https://github.com/bowlofnoodles"
   },
-  "maintainers": ["jerry_cheung<huahuazfh@qq.com>"],
+  "maintainers": [
+    "jerry_cheung<huahuazfh@qq.com>"
+  ],
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.5",
